--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -40,7 +40,7 @@
         memory: "{{ traefik_memory }}"
         recreate: "{{ template_config is changed }}"
         labels:
-          homepage.group: Networking
+          homepage.group: System
           homepage.name: Traefik
           homepage.icon: traefik
           homepage.href: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ traefik_port_ui }}"
