--- a/roles/traefik/templates/middlewares.yml
+++ b/roles/traefik/templates/middlewares.yml
@@ -4,25 +4,25 @@ http:
       rateLimit:
         average: 100
         burst: 50
-    geoblock:
-      plugin:
-        GeoBlock:
-          silentStartUp: true
-          allowLocalRequests: true
-          logLocalRequests: false
-          logAllowedRequests: false
-          logApiRequests: false
-          api: "https://get.geojs.io/v1/ip/country/{ip}"
-          apiTimeoutMs: 500
-          cacheSize: 25
-          forceMonthlyUpdate: true
-          allowUnknownCountries: false
-          unknownCountryApiResponse: "nil"
-          countries:
-            - PL
-            - DE
-            - GB
-            - IE
+#    geoblock:
+#      plugin:
+#        GeoBlock:
+#          silentStartUp: true
+#         allowLocalRequests: true
+#         logLocalRequests: false
+#         logAllowedRequests: false
+#         logApiRequests: false
+#         api: "https://get.geojs.io/v1/ip/country/{ip}"
+#          apiTimeoutMs: 500
+#          cacheSize: 25
+#          forceMonthlyUpdate: true
+#          allowUnknownCountries: false
+#          unknownCountryApiResponse: "nil"
+#          countries:
+#            - PL
+#            - DE
+#            - GB
+#            - IE
     secure-headers:
       headers:
         stsSeconds: 63072000
