--- a/roles/jellyfin/tasks/main.yml
+++ b/roles/jellyfin/tasks/main.yml
@@ -18,9 +18,9 @@
           - "{{ jellyfin_movies_directory }}:/movies:{{ jellyfin_movies_permissions }}"
           - "{{ jellyfin_music_directory }}:/music:{{ jellyfin_music_permissions }}"
           - "{{ jellyfin_photos_directory }}:/photos:{{ jellyfin_photos_permissions }}"
-          - "{{ jellyfin_tv_directory }}:/tv:{{ jellyfin_tv_permissions }}"
           - "{{ jellyfin_books_directory }}:/books:{{ jellyfin_books_permissions }}"
           - "{{ jellyfin_audiobooks_directory }}:/audiobooks:{{ jellyfin_audiobooks_permissions }}"
+        devices: "{{ plex_devices | default(omit) }}"
         ports:
           - "{{ jellyfin_port_http }}:8096"
         env:
