--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -60,6 +60,11 @@
           traefik.http.routers.homeassistant.tls.domains[0].main: "{{ ansible_nas_domain }}"
           traefik.http.routers.homeassistant.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.homeassistant.loadbalancer.server.port: "8123"
+          homepage.group: Home
+          homepage.name: HomeAssistant
+          homepage.icon: homeassistant.png
+          homepage.href: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:8123"
+          homepage.description: Home Automation
         memory: "{{ homeassistant_memory }}"
 
     - name: Mosquitto Docker Container
@@ -99,6 +104,11 @@
         env:
           TZ: "{{ ansible_nas_timezone }}"
           ZIGBEE2MQTT_CONFIG_MQTT_SERVER : mqtt://{{ mosquitto_container_name }}
+        homepage.group: Home
+          homepage.name: Zigbee2MQTT
+          homepage.icon: zigbee2mqtt.png
+          homepage.href: "http://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ zigbee2mqtt_port }}"
+          homepage.description: Zigbee2MQTT broker
         memory: "{{ zigbee2mqtt_memory }}"
 
   when: homeassistant_enabled is true
