--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "ansible>=11.1.0",
+    "jmespath>=1.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
