--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -35,13 +35,12 @@
           traefik.http.services.portainer.loadbalancer.server.port: "9443"
           traefik.http.routers.portainer.middlewares: "portainer-ipallowlist@docker"
           traefik.http.middlewares.portainer-ipallowlist.ipallowlist.sourcerange: "{{ portainer_ip_allowlist }}"
-          homepage.group: System Tools
+          homepage.group: System
           homepage.name: Portainer
           homepage.icon: portainer.png
-          homepage.href: "https://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ portainer_port }}"
           homepage.description: Container management
           homepage.widget.type: portainer
-          homepage.widget.url: "https://{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ portainer_port }}"
+          homepage.widget.url: "https://{{ ansible_nas_hostname }}:{{ portainer_port }}"
   when: portainer_enabled is true
 
 - name: Stop Portainer
