⬆️ Update baserow caddyfile

--- a/roles/baserow/defaults/main.yml
+++ b/roles/baserow/defaults/main.yml
@@ -27,19 +27,19 @@ baserow_caddy_image_name: "caddy"
 baserow_caddy_image_version: "2"
 baserow_backend_container_name: baserow-backend
 baserow_backend_image_name: "baserow/backend"
-baserow_backend_image_version: "1.25.1"
+baserow_backend_image_version: "latest"
 baserow_frontend_container_name: baserow-frontend
 baserow_frontend_image_name: "baserow/web-frontend"
-baserow_frontend_image_version: "1.25.1"
+baserow_frontend_image_version: "latest"
 baserow_celery_container_name: baserow-celery
 baserow_celery_image_name: "baserow/backend"
-baserow_celery_image_version: "1.25.1"
+baserow_celery_image_version: "latest"
 baserow_celery_export_container_name: baserow-celery-export
 baserow_celery_export_image_name: "baserow/backend"
-baserow_celery_export_image_version: "1.25.1"
+baserow_celery_export_image_version: "latest"
 baserow_celery_beat_container_name: baserow-celery-beat
 baserow_celery_beat_image_name: "baserow/backend"
-baserow_celery_beat_image_version: "1.25.1"
+baserow_celery_beat_image_version: "latest"
 baserow_db_container_name: baserow-db
 baserow_db_image_name: "postgres"
 baserow_db_image_version: "15"
