--- a/roles/affine/defaults/main.yml
+++ b/roles/affine/defaults/main.yml
@@ -15,14 +15,18 @@ affine_network_name: "affine"
 affine_memory: 1g
 affine_db_memory: 1g
 affine_redis_memory: 1g
+affine_migration_memory: 1g
 
 # docker
 affine_container_name: affine
 affine_image_name: "ghcr.io/toeverything/affine-graphql"
 affine_image_version: stable
+affine_migration_container_name: affine_migration_job
+affine_migration_image_name: "ghcr.io/toeverything/affine-graphql"
+affine_migration_image_version: stable
 affine_db_container_name: affine-db
 affine_db_image_name: postgres
-affine_db_image_version: latest
+affine_db_image_version: 16
 affine_redis_container_name: affine-redis
 affine_redis_image_name: redis
 affine_redis_image_version: latest
