--- a/roles/cwa/tasks/main.yml
+++ b/roles/cwa/tasks/main.yml
@@ -19,8 +19,7 @@
         pull: true
         volumes:
           - "{{ cwa_data_directory }}/config:/config"
-          - "{{ cwa_books_root }}:/books"
-          - "{{ cwa_data_directory }}/data:/calibre-library"
+          - "{{ cwa_books_root }}:/calibre-library"
           - "{{ cwa_data_directory }}/ingest:/cwa-book-ingest"
         env:
           TZ: "{{ ansible_nas_timezone }}"
